# instrumenta

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  IDEAS.md  LICENSE  README.md  Taskfile.yml  app.py  docker-compose.hysteria.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .golangci.yml  Dockerfile  go.mod  go.sum  pyproject.toml
backend/cmd/api/: main.go
backend/cmd/dev-notify/: main.go
backend/cmd/notifier/: main.go
backend/internal/app/: dsn.go  migrate.go  migrate_test.go  wire.go
backend/internal/application/: services.go
backend/internal/application/adapters/: bond_service.go  favorites_repository.go  market_radar_service.go  notifications_repository.go  portfolio_service.go
backend/internal/application/billing/: service.go  service_test.go
backend/internal/application/bonds/: bond_service.go  bond_service_sort_test.go
backend/internal/application/market/: key_rate_service.go  key_rate_service_test.go
backend/internal/domain/bonds/: models.go  (+5 more)
backend/migrations/: 001_initial.sql  002_spread_snapshots.sql  003_market_radar.sql  004_bond_reference.sql  005_multi_tenant.sql  006_billing.sql  007_telegram_bot.sql  008_user_tax_rate.sql  009_broker_credential_trade_enabled.sql
backend/src/bond_monitor/: __init__.py  main.py
backend/testdata/golden/: aa19dfd_portfolio_meta.json  advice.json  bonds_list_normal_hold.json  calculator_portfolio.json  config_get.json  deploy_session_active.json  deploy_session_conflict.json  favorites_list.json  health_get.json  market_radar_empty.json  notifications_list.json  order_preview_buy.json  portfolio_auto_compose.json  portfolio_create.json  portfolio_plan.json  portfolios_list.json  trading_state.json  trading_state_not_found.json
backend/tests/: conftest.py  factories.py
backend/tests/fixtures/: aa19dfd_plan_snapshot.json
backend/tests/unit/: conftest.py  test_account_operation_serializer.py  test_api_account_operations.py  test_api_portfolio_crud.py  test_api_portfolio_plan.py  test_api_trading_account_preview.py  test_api_trading_accounts.py  test_api_trading_attach.py  test_api_trading_confirm.py  test_api_trading_create_sandbox_account.py  test_api_trading_delete_sandbox_account.py  test_api_trading_order_preview.py  test_api_trading_sandbox_pay_in.py  test_api_trading_sync.py  test_apply_top_up_distribution.py  test_bond_selection.py  test_bond_serializer.py  test_bond_service.py  test_distribute_top_up.py  test_formatting.py  test_instrument_trade_cache.py  test_moex_client.py  test_money.py  test_order_cost.py  test_pending_operations.py  test_pending_request_uid.py  test_plan_top_up_metrics.py  test_planner.py  test_portfolio_reconciler.py  test_portfolio_serializer.py  test_position_lifecycle.py  test_scorer.py  test_sync_reuse_plan.py  test_tinvest_asset_metadata.py  test_trading_cash_constraints.py  test_trading_client_market_sell.py  test_trading_client_post_order.py  test_trading_client_snapshot.py  test_trading_order_retry.py  test_trading_policies.py  (+3 more)
(+635 files in other folders)
