[project]
name = "bond-monitor"
version = "0.2.0"
description = "Short-term Russian bond screener with portfolio planning"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["backend"]

[dependency-groups]
deploy = ["pyinfra>=3.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["B008", "N803", "N806", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["bond_monitor"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "sandbox: e2e тест, использующий sandbox T-Invest API (требует T_TRADING_TOKEN_SANDBOX)",
]
testpaths = ["backend/tests"]
