[project]
name = "bond-monitor-backend"
version = "0.2.0"
description = "Bond Monitor API — Litestar backend"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.12.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "pyjwt>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyxirr>=0.10.0",
    "t-tech-investments @ https://opensource.tbank.ru/invest/invest-python/-/archive/0.3.5/invest-python-0.3.5.tar.gz",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bond_monitor"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "sandbox: e2e тест, использующий sandbox T-Invest API",
]
testpaths = ["tests"]
